verif/test/deca/codegen/invalid/arithmetiques/depasse-neg-int-verif.res
src/test/deca/codegen/invalid/arithmetiques/depasse-neg-int.deca:9:8: Invalid int : 2147483648 is not valid (out of range or malformed)
